# ParkingLotSecurity

./: .gitignore  CMakeLists.txt  README.md  build.bat
Documentation/Licenta/: Licenta.tex  bibliography.bib  licenta.bbl
app/: .gitignore  CMakeLists.txt
app/src/Application/: CMakeLists.txt  main.cpp
app/src/Interface/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  statisticswindow.h  ticketprinter.cpp  ticketprinter.h  unpaidwindow.cpp  unpaidwindow.h  uploadqrwindow.h
app/src/LicensePlateDetection/: CMakeLists.txt  licenseplatedetection.cpp  licenseplatedetection.h
app/src/Logger/: logger.cpp  logger.h
app/src/QRCodeDetection/: CMakeLists.txt  qrcodedetection.cpp  qrcodedetection.h
app/src/VehicleManager/: CMakeLists.txt  ticket.cpp  ticket.h  vehicle.h  vehiclemanager.cpp  vehiclemanager.h
app/src/WebSocketClient/: CMakeLists.txt  websocketclient.cpp  websocketclient.h
app/tests/: CMakeLists.txt  licenseplatedetectiontests.cpp
app/translations/: eng.ts  ro.ts
database/: subscriptions.txt  vehicles.txt
documentation/disertatie/: .gitignore  Makefile  bibliografie.bib  chapter1.tex  chapter2.tex  chapter3.tex  chapter4.tex  chapter5.tex  teza-upb.cls  teza.tex
documentation/licenta/: bibliography.bib
server/: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile
server/src/Application/: CMakeLists.txt  main.cpp
server/src/DatabaseManager/: CMakeLists.txt  databasemanager.cpp  databasemanager.h
server/src/HttpServer/: CMakeLists.txt  httplib.h  httpserver.cpp  httpserver.h
server/src/Logger/: CMakeLists.txt  logger.h
server/src/QRCodeDetection/: CMakeLists.txt  qrcodedetection.cpp  qrcodedetection.h
server/src/SubscriptionManager/: CMakeLists.txt  account.h  subscription.h  subscriptionmanager.cpp  subscriptionmanager.h
server/src/WebSocketServer/: CMakeLists.txt  websocketserver.cpp  websocketserver.h
src/Application/: CMakeLists.txt  main.cpp
src/DatabaseManager/: CMakeLists.txt  databasemanager.cpp  databasemanager.h
src/GUI/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  passwordwindow.cpp  passwordwindow.h  statisticswindow.cpp  statisticswindow.h  subscriptionswindow.cpp  subscriptionswindow.h  unpaidwindow.cpp  unpaidwindow.h  uploadqrwindow.cpp  uploadqrwindow.h  vehicle.cpp  vehicle.h
src/HttpServer/: CMakeLists.txt  httpServer.cpp  httpServer.h
src/ImageProcessingUtils/: CMakeLists.txt  ImageProcessingUtils.cpp  ImageProcessingUtils.h
src/QRCodeUtils/: CMakeLists.txt  QRCodeUtils.cpp  QRCodeUtils.h
src/VehicleManager/: CMakeLists.txt  account.cpp  account.h  subscription.cpp  subscription.h  subscriptionmanager.cpp  subscriptionmanager.h  vehicle.cpp  vehicle.h  vehiclemanager.cpp  vehiclemanager.h
tesseract/: TrainTesseract.ipynb
tests/: CMakeLists.txt  ImageProcessingUtilsTests.cpp
training/: generate_dataset.ipynb  train.ipynb  train_qrbitnet.ipynb
translations/: gui_eng.qm  gui_eng.ts  gui_ro.qm  gui_ro.ts
website/: .gitignore  Dockerfile  account.html  angular.json  create_subscription.html  generate-environments.sh  index.html  login.html  package-lock.json  package.json  replace-env-vars.sh  subscription.html  subscriptions.html
website/scripts/: account.js  create_subscription.js  login.js  script.js  subscription.js  subscriptions.js
website/src/: index.html  styles.css
website/src/app/: app-routing.module.ts  app.component.ts  app.module.ts  auth.service.ts  global.d.ts  recaptcha.service.ts
website/src/app/account/: account.component.html  account.component.ts
website/src/app/contact/: contact.component.html  contact.component.ts
website/src/app/create-subscription/: create-subscription.component.html  create-subscription.component.spec.ts  create-subscription.component.ts
website/src/app/dashboard/: dashboard.component.html  dashboard.component.ts
website/src/app/login/: login.component.html  login.component.ts
website/src/app/mainpage/: mainpage.component.html  mainpage.component.ts
website/src/app/recover-password/: recover-password.component.html  recover-password.component.spec.ts  recover-password.component.ts
website/src/app/recover-selector/: recover-selector.component.html  recover-selector.component.spec.ts  recover-selector.component.ts
website/src/app/redirect/: redirect.component.html  redirect.component.spec.ts  redirect.component.ts
website/src/app/reset-password/: reset-password.component.html  reset-password.component.ts
website/src/app/subscription/: subscription.component.html  subscription.component.spec.ts  subscription.component.ts
website/src/app/subscriptions/: subscriptions.component.html  subscriptions.component.spec.ts  subscriptions.component.ts
website/src/app/terms-and-conditions/: terms-and-conditions.component.html  terms-and-conditions.component.spec.ts  terms-and-conditions.component.ts
website/src/app/unsubscribe/: unsubscribe.component.html  unsubscribe.component.spec.ts  unsubscribe.component.ts
website/src/app/validate-account/: validate-account.component.spec.ts  validate-account.component.ts
website/src/app/validate-phone/: validate-phone.component.html  validate-phone.component.spec.ts  validate-phone.component.ts
website/src/app/validate-update/: validate-update.component.html  validate-update.component.spec.ts  validate-update.component.ts
website/src/app/validation-selector/: validation-selector.component.html  validation-selector.component.spec.ts  validation-selector.component.ts
website/styles/: styles.css
